--- a/frontend/src/features/photoGallery/components/PhotoGalleryEdit/photoGalleryEdit.module.css
+++ b/frontend/src/features/photoGallery/components/PhotoGalleryEdit/photoGalleryEdit.module.css
@@ -34,7 +34,7 @@
   position: absolute;
   top: 5px;
   right: 5px;
-  background-color: rgba(255, 255, 255, 0.8);
+  background-color: var(--icon-color);
   border-radius: 50%;
   width: 24px;
   height: 24px;
@@ -47,15 +47,15 @@
 .addItem {
   aspect-ratio: 1;
   border-radius: 10px;
-  border: 2px dashed #ccc;
+  border: 2px dashed var(--border-color);
   display: flex;
   align-items: center;
   justify-content: center;
   cursor: pointer;
-  background-color: #f8f9fa;
+  background-color: var(--section-background);
 }
 
 .addItem svg {
   font-size: 30px;
-  color: var(--secondary-color);
+  color: var(--primary-color);
 }
