--- a/frontend/src/pages/ProfilePage/components/Page/profilePage.module.css
+++ b/frontend/src/pages/ProfilePage/components/Page/profilePage.module.css
@@ -285,7 +285,7 @@
 
 .editSection {
   margin-top: 25px;
-  background-color: white;
+  background-color: var(--section-background);
   border-radius: 10px;
   padding: 15px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.05);
