--- a/frontend/src/pages/ProfilePage/components/ProfileHeader/profileHeader.module.css
+++ b/frontend/src/pages/ProfilePage/components/ProfileHeader/profileHeader.module.css
@@ -9,6 +9,7 @@
   flex-direction: column;
   align-items: center;
   height: 120px;
+  box-shadow: 0 4px 10px 2px rgba(0, 0, 0, 0.2);
 }
 
 .header {
