--- a/frontend/src/pages/ProfilePage/components/ProfileSection/profileSection.module.css
+++ b/frontend/src/pages/ProfilePage/components/ProfileSection/profileSection.module.css
@@ -3,7 +3,7 @@
   background-color: var(--section-background);
   border-radius: 10px;
   padding: 15px;
-  box-shadow: 0 2px 5px var(--shadow-color);
+  box-shadow: 0 4px 10px 2px rgba(0, 0, 0, 0.1);
 }
 
 .sectionHeader {
