--- a/frontend/src/shared/components/CustomInput/customInput.module.css
+++ b/frontend/src/shared/components/CustomInput/customInput.module.css
@@ -2,9 +2,9 @@
   padding: 10px 15px;
   border: none;
   border-radius: 15px;
-  background-color: #f5f7fa;
+  background-color: var(--custom-input);
   font-size: 16px;
-  color: #333;
+  color: var(--text-color);
   outline: none;
   transition: background-color 0.3s;
   height: 50px;
