--- a/frontend/src/widgets/ProfileView/profileView.module.css
+++ b/frontend/src/widgets/ProfileView/profileView.module.css
@@ -103,6 +103,9 @@
   font-weight: bold;
   margin: 0;
   text-shadow: 0 1px 3px rgba(0, 0, 0, 0.5); /* Shadow for better readability */
+  display: flex;
+  flex-direction: row;
+  gap: 8px;
 }
 
 /* User info (age, location) styling on the photo */
@@ -403,4 +406,20 @@
   width: 100%;
   height: 100%;
   object-fit: cover; /* Ensures the image covers the container while maintaining aspect ratio */
+}
+
+.verifiedBadge {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  width: 1rem;
+  height: 1rem;
+  /* background-color: white; */
+  color: white;
+  border-radius: 50%;
+  font-size: 0.875rem;
+  font-weight: bold;
+  margin-top: 12px;
+  margin-left: 2px;
+  box-shadow: 0 4px 10px 2px rgba(0, 0, 0, 0.2);
 }
