--- a/frontend/src/features/ProfileSlider/components/Slider/profileSlider.module.css
+++ b/frontend/src/features/ProfileSlider/components/Slider/profileSlider.module.css
@@ -7,9 +7,10 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  height: 800px;
 }
 
-.profileСard {
+.profileCard {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -102,18 +103,6 @@
   user-select: none;
 }
 
-/*TODO*/
-.profileCard {
-  /* position: relative;
-  width: 100%;
-  width: 350px;
-  height: 600px;
-  border-radius: 2.188rem;
-  overflow: hidden; 
-  box-shadow: 0 4px 10px 2px rgba(0, 0, 0, 0.2); */
-  /*TODO*/
-}
-
 .profileImage {
   width: 100%;
   height: 100%;
@@ -142,7 +131,7 @@
   bottom: 25px;
   left: 20px;
   color: white;
-  text-shadow: 0 0 8px rgba(0, 0, 0, 0.9);
+  text-shadow: 0 0 10px rgba(0, 0, 0, 0.9);
 
   font-family: 'Jost';
   font-size: 1rem;
@@ -195,6 +184,7 @@
   z-index: 1;
   position: absolute;
   left: 20px;
+  width: 260px;
 }
 
 .lifestyle ul {
@@ -218,4 +208,12 @@
   padding: 5px 10px;
   border-radius: 15px;
   font-size: 0.8em;
+}
+
+.emptyState {
+  text-align: center;
+}
+
+.like {
+  margin-top: 5px;
 }
