--- a/frontend/src/shared/components/CustomInput/customInput.module.css
+++ b/frontend/src/shared/components/CustomInput/customInput.module.css
@@ -2,7 +2,7 @@
   padding: 10px 15px;
   border: none;
   border-radius: 15px;
-  background-color: var(--custom-input);
+  background-color: var(--custom-input-enter);
   font-size: 16px;
   color: var(--text-color);
   outline: none;
