--- a/frontend/src/features/ProfileSlider/components/Slider/profileSlider.module.css
+++ b/frontend/src/features/ProfileSlider/components/Slider/profileSlider.module.css
@@ -23,6 +23,37 @@
   overflow: hidden;
 }
 
+.profileCard {
+  position: relative;
+  display: inline-block;
+}
+
+.profileCard::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(
+    to bottom,
+    rgba(0, 0, 0, 0) 0%,
+    rgba(0, 0, 0, 0) 7%,
+    rgba(0, 0, 0, 0) 80%,
+    rgb(0, 0, 0) 100%
+  );
+  pointer-events: none;
+}
+
+.profileCard .overlay-text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+  z-index: 2;
+}
+
 .profileImage {
   border-radius: 2.188rem;
   object-fit: cover;
@@ -90,12 +121,13 @@
   position: absolute;
   bottom: 20px;
   right: 20px;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(85, 85, 85, 0.5);
   color: white;
   padding: 5px 10px;
   border-radius: 15px;
   font-size: 14px;
   text-shadow: none;
+  z-index: 2;
 }
 
 .profileImage {
@@ -124,6 +156,7 @@
   font-size: 2rem;
   font-weight: medium;
   margin-left: 1rem;
+  z-index: 2;
 }
 
 .bio {
@@ -147,6 +180,7 @@
 
   white-space: normal;
   word-wrap: break-word;
+  z-index: 2;
 }
 
 .nameWithBioOne {
@@ -160,6 +194,7 @@
   font-weight: medium;
   margin-left: 1rem;
   bottom: 50px;
+  z-index: 2;
 }
 
 .nameWithBioTwo {
@@ -173,6 +208,7 @@
   font-weight: medium;
   margin-left: 1rem;
   bottom: 70px;
+  z-index: 2;
 }
 
 .nameWithGoal {
@@ -185,12 +221,26 @@
   font-size: 2rem;
   font-weight: medium;
   margin-left: 1rem;
-  bottom: 50px;
+  bottom: 60px;
+  z-index: 2;
+}
+
+.nameWithInterests {
+  position: absolute;
+  left: 20px;
+  color: white;
+  text-shadow: 0 0 8px rgba(0, 0, 0, 0.9);
+
+  font-family: 'Jost';
+  font-size: 2rem;
+  font-weight: medium;
+  margin-left: 1rem;
+  bottom: 60px;
+  z-index: 2;
 }
 
 .lifestyle,
 .interests {
-  margin-top: 530px;
   padding: 10px;
   border-radius: 10px;
   color: white;
@@ -198,6 +248,8 @@
   position: absolute;
   left: 20px;
   width: 260px;
+  z-index: 2;
+  bottom: 25px;
 }
 
 .lifestyle ul {
@@ -242,14 +294,15 @@
   font-size: 1.2rem;
   font-weight: 300;
   margin-left: 1rem;
+  z-index: 2;
 }
 
 .goal {
-  background-color: rgba(0, 0, 0, 0.5);
+  position: absolute;
+
   padding: 5px 10px;
   border-radius: 15px;
   font-size: 1em;
-  margin-top: 530px;
   padding: 10px;
   border-radius: 10px;
   color: white;
@@ -260,9 +313,46 @@
   gap: 5px;
   height: 30px;
   align-items: center;
-  font-weight: 300;
+  z-index: 2;
+  bottom: 30px;
+
+  background-color: rgba(117, 115, 115, 0.5);
+  padding: 5px 10px;
+  font-size: 0.8em;
 }
 
 .goalIcon {
-  margin-top: 2px;
+  /* margin-top: 2px; */
+}
+
+.block {
+  position: absolute;
+  /* bottom: 560px; */
+  top: 14px;
+  right: 30px;
+
+  color: white;
+  filter: drop-shadow(2px 2px 2px rgba(0, 0, 0, 0.7));
+
+  /* box-shadow: 0 0 8px rgba(0, 0, 0, 0.9); */
+
+  /* font-family: 'Jost';
+  font-size: 1.2rem;
+  font-weight: 300;
+  margin-left: 1rem; */
+  z-index: 2;
+  /* padding: 5px 10px; */
+
+  /* border-radius: 15px;
+  font-size: 1em;
+  padding: 10px;
+  border-radius: 10px;
+  color: white; */
+
+  /* background-color: rgba(0, 0, 0, 0.5); */
+  /* padding: 5px 10px;
+  font-size: 0.8em; */
+
+  /* width: 20px;
+  height: 20px; */
 }
