--- a/frontend/src/features/ProfileSlider/components/Slider/profileSlider.module.css
+++ b/frontend/src/features/ProfileSlider/components/Slider/profileSlider.module.css
@@ -5,9 +5,9 @@
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
-  height: 800px;
+  height: calc(100vh - 180px);
+  max-height: 800px;
 }
 
 .profileCard {
@@ -16,7 +16,8 @@
   justify-content: center;
   position: relative;
   width: 350px;
-  height: 600px;
+  height: calc(100vh - 180px);
+  max-height: 600px;
   align-items: center;
   border-radius: 2.188rem;
   box-shadow: 0 4px 10px 2px rgba(0, 0, 0, 0.2);
