--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -8,17 +8,18 @@
   --text-color: #333;
   --secondary-text-color: #666;
   --tertiary-text-color: #999;
-  --primary-color: #202c83;
+  --primary-color: #3b5eda;
   --secondary-color: #6c5ce7;
   --section-background: #ffffff;
   --border-color: #f0f0f0;
   --tag-background: #f0f0f0;
   --tag-color: #333;
-  --header-background: #202c83;
+  /*  2343B8 */
+  --header-background: #3b5eda;
   --header-text-color: #ffffff;
   --button-background: #f0f0f0;
   --button-color: #555;
-  --button-active-background: #202c83;
+  --button-active-background: #3b5eda;
   --button-active-color: #ffffff;
   --shadow-color: rgba(0, 0, 0, 0.05);
   --border-color: #ccc;
@@ -35,7 +36,7 @@ body[data-theme='dark'] {
   --text-color: #ffffff;
   --secondary-text-color: #cccccc;
   --tertiary-text-color: #999999;
-  --primary-color: #2435b2;
+  --primary-color: #3b5eda;
   --secondary-color: #6c5ce7;
   --section-background: #202020;
   --border-color: #222222;
@@ -45,7 +46,7 @@ body[data-theme='dark'] {
   --header-text-color: #040404;
   --button-background: #3b3a3a;
   --button-color: #cccccc;
-  --button-active-background: #202c83;
+  --button-active-background: #3b5eda;
   --button-active-color: #ffffff;
   --shadow-color: rgba(0, 0, 0, 0.4);
   --border-color: #7b7a7a;
@@ -55,6 +56,10 @@ body[data-theme='dark'] {
   --custom-input: #3b3a3a;
   --custom-input-enter: #3b3a3a;
 }
+
+/*
+#b5b5b5 gray
+*/
 
 /*a {
   font-weight: 500;
