--- a/frontend/src/pages/ProfilePage/components/ProfileInfo/profileInfo.module.css
+++ b/frontend/src/pages/ProfilePage/components/ProfileInfo/profileInfo.module.css
@@ -11,18 +11,20 @@
 }
 
 .profilePic {
-  width: 100px;
-  height: 100px;
+  width: 120px;
+  height: 120px;
   border-radius: 50%;
   border: 3px solid white;
   object-fit: cover;
   background-color: #f0f0f0;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+  /* margin-top: 15px; */
 }
 
 .verificationBadge {
   position: absolute;
-  bottom: 0;
-  right: 0;
+  bottom: 7px;
+  right: 5px;
   background-color: #1da1f2;
   color: white;
   border-radius: 50%;
@@ -37,7 +39,7 @@
 }
 
 .profileInfo h2 {
-  margin: 10px 0;
+  /* margin: 6px 0; */
   font-size: 22px;
   font-weight: 600;
 }
@@ -46,4 +48,26 @@
   margin-top: 10px;
   background-color: #1da1f2;
   color: white;
+  border-radius: 20px;
+  /* padding: 15px 0; */
+  margin-top: 20px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.4);
+  width: 360px !important;
+}
+
+/* .name {
+  position: relative;
+  margin-top: -10px;
+} */
+
+.proBadge {
+  background-color: #f21deb;
+  color: white;
+  font-weight: 400;
+  border-radius: 20%;
+  width: 35px;
+  text-align: center;
+  position: relative;
+  margin-top: -20px;
+  margin-left: 45px;
 }
