--- a/frontend/src/shared/components/CustomButton/customButton.module.css
+++ b/frontend/src/shared/components/CustomButton/customButton.module.css
@@ -17,7 +17,7 @@
   align-items: center;
   justify-content: center;
   width: 100%;
-  max-width: 290px;
+  /* max-width: 290px; */
 }
 
 .customButton.disabled {
