--- a/frontend/src/features/ProfileSlider/components/Slider/profileSlider.module.css
+++ b/frontend/src/features/ProfileSlider/components/Slider/profileSlider.module.css
@@ -357,3 +357,61 @@
   /* width: 20px;
   height: 20px; */
 }
+
+/* profileSlider.module.css */
+.adContent {
+  position: absolute;
+  bottom: 20px;
+  left: 0;
+  right: 0;
+  padding: 15px;
+  text-align: center;
+}
+
+.adTimer {
+  position: absolute;
+  /* top: 50%;
+  left: 50%; */
+  /* bottom: 0%; */
+  top: 5%;
+  left: 10%;
+  /* right: -5%; */
+  transform: translate(-50%, -50%);
+  background-color: rgba(0, 0, 0, 0.7);
+  color: white;
+  font-size: 1.8rem;
+  font-weight: 500;
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 10;
+  box-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
+}
+
+.adText {
+  position: absolute;
+  /* left: 50%; */
+  right: -10%;
+  top: 2%;
+  transform: translateX(-50%);
+  background-color: rgba(0, 0, 0, 0.7);
+  /* background-color: rgb(255, 247, 0, 0.7); */
+  color: white;
+  font-size: 1rem;
+  padding: 7px;
+  border-radius: 8px;
+  margin: 0 15px;
+}
+
+/* .adText {
+  color: white;
+  font-size: 1.2rem;
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+  background-color: rgb(255, 247, 0.4);
+  padding: 10px;
+  border-radius: 8px;
+  margin: 0 15px;
+} */
