--- a/frontend/src/shared/components/ProfileCard/profileCard.module.css
+++ b/frontend/src/shared/components/ProfileCard/profileCard.module.css
@@ -94,8 +94,8 @@
 
 .iconOverlay {
   position: absolute;
-  top: 10px;
-  right: 10px;
+  top: -2px;
+  right: 1px;
   color: white;
   background: rgba(0, 0, 0, 0.3);
   padding: 7px;
@@ -109,7 +109,7 @@
   transform: scale(1.1);
 }
 
-@keyframes pulse {
+/* @keyframes pulse {
   0% {
     transform: scale(1);
     box-shadow: 0 0 0 0 rgba(255, 65, 108, 0.5);
@@ -134,9 +134,9 @@
   100% {
     opacity: 1;
   }
-}
+} */
 
-@keyframes bounce {
+/* @keyframes bounce {
   0% {
     transform: translateY(0);
   }
@@ -146,7 +146,7 @@
   100% {
     transform: translateY(0);
   }
-}
+} */
 
 @keyframes messageNotification {
   0% {
