--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -42,7 +42,7 @@ body[data-theme='dark'] {
   --border-color: #222222;
   --tag-background: #3b3a3a;
   --tag-color: #ffffff;
-  --header-background: #2435b2;
+  --header-background: #3b5eda;
   --header-text-color: #040404;
   --button-background: #3b3a3a;
   --button-color: #cccccc;
