--- a/frontend/src/shared/components/PhoneInput/phoneInput.module.css
+++ b/frontend/src/shared/components/PhoneInput/phoneInput.module.css
@@ -21,7 +21,9 @@
   font-size: 16px;
   color: var(--text-color);
   outline: none;
-  transition: background-color 0.3s, border 0.3s;
+  transition:
+    background-color 0.3s,
+    border 0.3s;
   height: 50px;
   width: 320px;
 }
