--- a/frontend/src/pages/ProfilePage/components/Profile/profile.module.css
+++ b/frontend/src/pages/ProfilePage/components/Profile/profile.module.css
@@ -24,7 +24,7 @@
 }
 
 .premiumButton {
-  background-color: white;
+  background-color: var(--button-backround);
   width: 100%;
   height: 40px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
