[COUPLY-71] styles fix

--- a/frontend/src/pages/HomePage/components/Page/homePage.module.css
+++ b/frontend/src/pages/HomePage/components/Page/homePage.module.css
@@ -1,6 +1,7 @@
 .pageContainer {
   padding: 20px;
-  padding-bottom: 70px;
+  /* padding-bottom: calc(70px + env(safe-area-inset-bottom)); */
+  padding-bottom: 40px;
   display: flex;
   flex-direction: column;
   gap: 20px;
@@ -25,7 +26,11 @@
 }
 
 .personCard {
-  margin-top: 8.75rem;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  margin-top: 0;
+  min-height: 0; /* Важно для корректной работы flex */
 }
 
 .header {
@@ -96,15 +101,15 @@
   .spacer {
     width: 2rem;
   }
+
+  /* .pageContainer {
+    padding-bottom: calc(80px + env(safe-area-inset-bottom));
+  } */
 }
 
 @media (min-width: 768px) {
   .header {
     margin-top: 1rem;
-  }
-
-  .personCard {
-    margin-top: 9.375rem;
   }
 }
 
