--- a/frontend/src/features/ProfileSlider/components/Slider/profileSlider.module.css
+++ b/frontend/src/features/ProfileSlider/components/Slider/profileSlider.module.css
@@ -1,13 +1,14 @@
 .slider {
   width: 100%;
-  max-width: 500px;
   margin: 0 auto;
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  height: calc(100vh - 180px);
-  max-height: 800px;
+  align-items: stretch;
+  flex: 1;
+  min-height: 0;
+  position: relative;
+  height: 600px;
 }
 
 .profileCard {
@@ -15,13 +16,14 @@
   flex-direction: column;
   justify-content: center;
   position: relative;
-  width: 350px;
-  height: calc(100vh - 180px);
-  max-height: 600px;
+  width: 100%;
+  height: 100%;
   align-items: center;
   border-radius: 2.188rem;
   box-shadow: 0 4px 10px 2px rgba(0, 0, 0, 0.2);
   overflow: hidden;
+  flex: 1;
+  min-height: 0;
 }
 
 .profileCard {
@@ -74,10 +76,11 @@
   justify-content: space-around;
   width: 100%;
   max-width: 350px;
-  margin: 1rem auto -1rem;
+  margin: 1rem auto;
   position: relative;
   z-index: 10;
   align-items: center;
+  padding-bottom: env(safe-area-inset-bottom);
 }
 
 .likeButton {
@@ -286,7 +289,8 @@
 
 .distance {
   position: absolute;
-  bottom: 560px;
+  /* bottom: 560px; */
+  top: 14px;
   left: 20px;
   color: white;
   text-shadow: 0 0 8px rgba(0, 0, 0, 0.9);
@@ -515,3 +519,16 @@
   transform: translateX(-100%);
   opacity: 0;
 } */
+
+@media (max-width: 600px) {
+  .slider {
+    max-width: none;
+    align-items: stretch;
+  }
+  .profileCard {
+    max-width: none;
+    width: 100%;
+    height: 100%;
+    align-items: stretch;
+  }
+}
