--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -91,6 +91,7 @@ body {
   bottom: 0;
   display: flex;
   flex-direction: column;
+  /* padding-bottom: env(safe-area-inset-bottom); */
 }
 
 *,
@@ -113,12 +114,20 @@ html {
   html {
     font-size: 15px;
   }
+
+  /* #root {
+    padding-bottom: calc(70px + env(safe-area-inset-bottom));
+  } */
 }
 
 @media (max-width: 480px) {
   html {
     font-size: 14px;
   }
+
+  /* #root {
+    padding-bottom: calc(80px + env(safe-area-inset-bottom));
+  } */
 }
 
 /* Стили для блокировки горизонтальной ориентации на мобильных устройствах */
