--- a/frontend/src/pages/ProfilePage/components/Profile/profile.module.css
+++ b/frontend/src/pages/ProfilePage/components/Profile/profile.module.css
@@ -24,7 +24,8 @@
 }
 
 .premiumButton {
-  background-color: var(--button-backround);
+  /* background-color: var(--button-backround); */
+  background-color: white;
   width: 100%;
   height: 40px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
