--- a/frontend/src/features/filters/components/FiltersDrawer/filtersDrawer.module.css
+++ b/frontend/src/features/filters/components/FiltersDrawer/filtersDrawer.module.css
@@ -10,6 +10,7 @@
   justify-content: center;
   align-items: flex-start;
   overflow-y: auto;
+  overflow-x: hidden;
 }
 
 .modalContainer {
@@ -22,6 +23,7 @@
   box-shadow: 0px 4px 10px var(--shadow-color);
   min-height: 100vh;
   overflow-y: auto;
+  overflow-x: hidden;
 }
 
 .content {
@@ -29,13 +31,14 @@
   display: flex;
   flex-direction: column;
   gap: 10px;
-  max-width: 500px;
+  max-width: 100%;
   margin: 0 auto;
   background-color: var(--section-background);
   color: var(--text-color);
   position: relative;
   z-index: 1001;
   padding-bottom: 120px;
+  box-sizing: border-box;
 }
 
 .header {
@@ -225,7 +228,6 @@ input:checked + .slider:before {
   }
 
   .chip {
-    padding: 6px 12px;
     font-size: 13px;
   }
 }
@@ -260,4 +262,40 @@ input:checked + .slider:before {
 
 .chipBigSelected:hover {
   background-color: var(--primary-color);
+}
+
+.buttonSave {
+  background-color: var(--tag-background);
+  border-radius: 20px;
+  padding: 8px 16px;
+  font-size: 14px;
+  color: var(--tag-color);
+  cursor: pointer;
+  transition: all 0.3s;
+  border: none;
+  outline: none;
+  font-weight: 400;
+  margin-top: 8px;
+  width: 100px;
+}
+
+.sectionTitleInterest {
+  font-size: 16px;
+  font-weight: 500;
+  margin: 0;
+  color: var(--text-color);
+}
+
+.contentInterest {
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  max-width: 500px;
+  margin: 0 auto;
+  background-color: var(--section-background);
+  color: var(--text-color);
+  position: relative;
+  z-index: 1001;
+  padding-bottom: 120px;
 }
