--- a/frontend/src/shared/components/MessageButton/messageButton.module.css
+++ b/frontend/src/shared/components/MessageButton/messageButton.module.css
@@ -1,7 +1,8 @@
 .circle {
   width: 45px;
   height: 45px;
-  background: rgb(255, 255, 255);
+  /* background: rgb(255, 255, 255); */
+  background-color: var(--small-button-color);
   box-shadow: 0 4px 10px 2px rgba(0, 0, 0, 0.2);
   border-radius: 50%;
 }
